// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mark /> renders 1`] = `
<mark
  className="mark-0-2-1"
>
  Word
</mark>
`;

exports[`<Mark /> renders selected 1`] = `
<mark
  className="mark-0-2-1 mark_selected-0-2-2"
>
  Word
</mark>
`;
